k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pump-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: social.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pump-social-service
                port:
                  number: 8080

    - host: auth.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pump-auth-service
                port:
                  number: 8080
